# fortilib

./: .coveragerc  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  renovate.json  tox.ini
.github/: release-drafter.yml
.github/workflows/: main.yml  pypi.yml  release.yml
docs/source/: api.rst  conf.py  index.rst
docs/source/extras/: test.rst
docs/source/fortilib/: fortilib.mixins.rst  fortilib.rst  modules.rst
docs/uml/: fortigate_objects.puml  policybuilder_objects.puml
fortilib/: __init__.py  address.py  addressgroup.py  base.py  exceptions.py  firewall.py  fortigateapi.py  fortiproxy.py  interface.py  ippool.py  phase1interface.py  phase2interface.py  policy.py  proxyaddress.py  proxyaddressgroup.py  proxypolicy.py  routes.py  service.py  servicegroup.py  vip.py  vipgroup.py
fortilib/mixins/: group.py  interface.py
src/fortilib/: __init__.py  address.py  base.py  exceptions.py  firewall.py  fortigateapi.py  interface.py  ippool.py  phase1interface.py  phase2interface.py  policy.py  proxyaddress.py  proxyaddressgroup.py  proxypolicy.py  routes.py  servicegroup.py  vip.py  vipgroup.py
tests/: __init__.py  data.py  settings.py.tmpl
tests/test_data/: data_policy_missing_address.py  data_policy_missing_interface.py  data_policy_missing_ippool.py  data_policy_missing_service.py
tests/tests_fortilib_firewall_read/: test_fortilib_firewall.py  test_fortilib_firewall_address_groups.py  test_fortilib_firewall_addresses.py  test_fortilib_firewall_base.py  test_fortilib_firewall_interfaces.py  test_fortilib_firewall_ippools.py  test_fortilib_firewall_phase1_interfaces.py  test_fortilib_firewall_phase2_interfaces.py  test_fortilib_firewall_policies.py  test_fortilib_firewall_proxy_address_groups.py  test_fortilib_firewall_proxy_addresses.py  test_fortilib_firewall_proxy_policies.py  test_fortilib_firewall_routes.py  test_fortilib_firewall_service_groups.py  test_fortilib_firewall_services.py  test_fortilib_firewall_vip_groups.py  test_fortilib_firewall_vips.py
tests/tests_fortilib_firewall_write/: test_fortilib_firewall_address.py  test_fortilib_firewall_address_group.py  test_fortilib_firewall_ippool.py  test_fortilib_firewall_phase1_interface.py  test_fortilib_firewall_phase2_interface.py  test_fortilib_firewall_policy.py  test_fortilib_firewall_proxy_address.py  test_fortilib_firewall_proxy_address_group.py  test_fortilib_firewall_proxy_policy.py  test_fortilib_firewall_route.py  test_fortilib_firewall_service.py  test_fortilib_firewall_service_group.py  test_fortilib_firewall_vip.py  test_fortilib_firewall_vip_group.py
