[tool.poetry]
name = "fortilib"
version = "0.1.8"
description = "fortilib - a Python Library to interact with Fortigate Firewalls"
readme = "README.md"
authors = [
    "Daniel Zinke <Daniel.Zinke@t-systems.com>",
    "Benjamin Böhm <Benjamin.Boehm@t-systems.com>",
    "Philipp Funk <Philipp.Funk@t-systems.com>",
    "André Ellguth <Andre.Ellguth@t-systems.com>",
    "Martin Neubert <Martin.Neubert@t-systems.com>"
]
license = "GPL-3.0-only"
homepage = "https://github.com/telekom-mms/fortilib"
repository = "https://github.com/telekom-mms/fortilib"
documentation = "https://github.com/telekom-mms/fortilib"
keywords = ["firewall", "fortinet", "fortigate"]

[tool.poetry.urls]
Changelog = "https://github.com/telekom-mms/fortilib/blob/master/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
httpx = ">=0.23.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.2"
tox = ">=4.0.0"
black = ">=22.6.0"
isort = ">=5.10.1"
coverage = ">=6.4.2"
pytest-integration = ">=0.2.2"
pytest-cov = ">=4.0.0"
pytest-order = ">=1.0.1"
Sphinx = ">=5.1.1"
flake8 = ">=5.0.4"
flake8-gl-codeclimate = ">=0.1.6"
sphinx-rtd-theme = ">=1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
