[tool.poetry]
name = "fortilib"
version = "1.0.4"
description = "fortilib - a Python Library to interact with Fortigate Firewalls"
readme = "README.md"
authors = [
    "Daniel Zinke <Daniel.Zinke@telekom.de>",
    "Benjamin Böhm <Benjamin.Boehm@telekom.de>",
    "Philipp Funk <Philipp.Funk@telekom.de>",
    "André Ellguth <Andre.Ellguth@telekom.de>",
    "Martin Neubert <Martin.Neubert@telekom.de>"
]
license = "GPL-3.0-only"
homepage = "https://github.com/telekom-mms/fortilib"
repository = "https://github.com/telekom-mms/fortilib"
documentation = "https://github.com/telekom-mms/fortilib"
keywords = ["firewall", "fortinet", "fortigate"]

[tool.poetry.urls]
Changelog = "https://github.com/telekom-mms/fortilib/blob/master/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
httpx = ">=0.23.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.2"
tox = ">=4.0.0"
black = ">=22.6.0"
isort = ">=5.10.1"
coverage = ">=6.4.2"
pytest-integration = ">=0.2.2"
pytest-cov = ">=4.0.0"
pytest-order = ">=1.0.1"
Sphinx = "^7.4.7"
flake8 = "^7.0.0"
sphinx-rtd-theme = ">=1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
