[project]
authors = [
    {name = "Daniel Zinke", email = "Daniel.Zinke@telekom.de"},
    {name = "Benjamin Böhm", email = "Benjamin.Boehm@telekom.de"},
    {name = "Philipp Funk", email = "Philipp.Funk@telekom.de"},
    {name = "André Ellguth", email = "Andre.Ellguth@telekom.de"},
    {name = "Martin Neubert", email = "Martin.Neubert@telekom.de"},
]
license = {text = "GPL-3.0-only"}
requires-python = "<4.0,>=3.11"
dependencies = [
    "httpx>=0.28.1,<0.29.0",
]
name = "fortilib"
version = "1.0.16"
description = "fortilib - a Python Library to interact with Fortigate Firewalls"
readme = "README.md"
keywords = [
    "firewall",
    "fortinet",
    "fortigate",
]

[project.urls]
Changelog = "https://github.com/telekom-mms/fortilib/blob/master/CHANGELOG.md"
homepage = "https://github.com/telekom-mms/fortilib"
repository = "https://github.com/telekom-mms/fortilib"
documentation = "https://github.com/telekom-mms/fortilib"

[dependency-groups]
dev = [
    "poethepoet>=0.39.0,<0.40.0",
    "pytest>=9.0.2,<10.0.0",
    "pytest-cov>=7.0.0,<8.0.0",
    "pytest-order>=1.3.0,<2.0.0",
    "ruff>=0.14.10,<0.15.0",
    "sphinx>8.0,<9.0",
    "sphinx-rtd-theme>3.0,<4.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.uv]
python-preference = "only-system"
add-bounds = "major"
default-groups = []

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "--cov=fortilib --cov-report=term-missing"

[tool.poe.tasks]
ruff-fix = "ruff check --fix"
ruff-format = "ruff format"
format = ["ruff-fix", "ruff-format"]
